--- a/intermodal_chart.html
+++ b/intermodal_chart.html
@@ -116,9 +116,7 @@
 
 <body>
 
-    <div id="controls">
-        <button onclick="downloadImage()">Download Optimized Dashboard as Image</button>
-    </div>
+    <!-- Download button removed for GitHub Pages version -->
 
     <div id="chart-container">
         <div class="chart-header">
