--- a/professional_chart.html
+++ b/professional_chart.html
@@ -121,9 +121,7 @@
 
 <body>
 
-    <div id="controls">
-        <button onclick="downloadImage()">Download Optimized Dashboard as Image</button>
-    </div>
+    <!-- Download button removed for GitHub Pages version -->
 
     <div id="chart-container">
         <div class="chart-header">
