--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
 
         <div class="nav-group">
             <button class="nav-btn active" onclick="loadDashboard('intermodal_chart.html', this)">
-                <span>📦</span> Intermodal Units
+                <span>🛳️</span> Intermodal Units
             </button>
             <button class="nav-btn" onclick="loadDashboard('professional_chart.html', this)">
-                <span>🚛</span> General Freight
+                <span>🌑</span> General Freight
             </button>
         </div>
 
