--- a/intermodal_chart.html
+++ b/intermodal_chart.html
@@ -56,6 +56,30 @@
             gap: 15px;
         }
 
+        @media (max-width: 768px) {
+            #chart-container {
+                padding: 15px;
+                width: 100%;
+                gap: 10px;
+            }
+
+            .chart-header h1 {
+                font-size: 1.5rem;
+            }
+
+            .disclaimer {
+                font-size: 12px;
+            }
+
+            #c1-container {
+                height: 400px;
+            }
+
+            #c4-container {
+                height: 280px;
+            }
+        }
+
         .chart-header {
             text-align: center;
             margin-bottom: 20px;
