--- a/professional_chart.html
+++ b/professional_chart.html
@@ -57,6 +57,30 @@
             gap: 15px;
         }
 
+        @media (max-width: 768px) {
+            #chart-container {
+                padding: 15px;
+                width: 100%;
+                gap: 10px;
+            }
+
+            .chart-header h1 {
+                font-size: 1.5rem;
+            }
+
+            #c1-container {
+                height: 400px;
+            }
+
+            #c3-container {
+                height: 180px;
+            }
+
+            #c4-container {
+                height: 180px;
+            }
+        }
+
         .chart-header {
             text-align: center;
             margin-bottom: 20px;
