--- a/index.html
+++ b/index.html
@@ -148,6 +148,17 @@
             text-transform: uppercase;
             font-weight: 800;
             letter-spacing: 1px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .brand h1 span {
+            font-size: 0.65rem;
+            color: #666;
+            text-transform: none;
+            font-weight: 400;
+            letter-spacing: 0;
+            margin-top: -2px;
         }
 
         .menu-btn {
@@ -281,7 +292,7 @@
         <div class="top-bar">
             <div class="brand">
                 <button class="menu-btn" onclick="toggleMenu()">☰</button>
-                <h1>Rail Analytics</h1>
+                <h1>Rail Analytics <span>Data Source: UTK Poland</span></h1>
             </div>
             <div class="status-container">
                 <div class="pulse"></div>
