--- a/intermodal_chart.html
+++ b/intermodal_chart.html
@@ -258,7 +258,24 @@
             maintainAspectRatio: false,
             plugins: {
                 legend: { display: false },
-                tooltip: { mode: 'index', intersect: false },
+                tooltip: {
+                    mode: 'index',
+                    intersect: false,
+                    callbacks: {
+                        label: function (context) {
+                            let label = context.dataset.label || '';
+                            if (label.includes('MA') || label.includes('Trend')) return null;
+                            let val = context.parsed.y;
+                            if (context.dataset.type === 'candlestick') val = context.raw.c;
+                            if (val === null || val === undefined) return null;
+                            return label + ': ' + val.toLocaleString(undefined, { minimumFractionDigits: 1, maximumFractionDigits: 1 });
+                        },
+                        title: function (context) {
+                            const d = new Date(context[0].parsed.x);
+                            return d.toLocaleDateString('en-US', { year: 'numeric', month: 'short', day: 'numeric' });
+                        }
+                    }
+                },
                 datalabels: { display: false }
             },
             scales: {
